--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">My First App</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="hello_world">Edda Björk Konráðsdóttir</string>
+    <string name="hello_world">Edda Björk Konráðsdóttir og Kristín!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
