--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">My First App</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="hello_world">Edda Björk Konráðsdóttir og Kristín!</string>
+    <string name="hello_world">Edda Björk Konráðsdóttir og Kristín Fjóla!</string>
     <string name="action_settings">Settings</string>
 
 </resources>
